--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-white bd shadow-sm">
         <div class="container">
-          <a class="navbar-brand tx-bold tx-spacing--2 order-1" href="#">LOGO</a>
+          <a class="navbar-brand tx-bold tx-spacing--2 order-1 pd-y-0" href="#"><img src="./assets/img/logo 2nd.svg" class="img-fluid" alt="" srcset=""></a>
         <button class="navbar-toggler order-2" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <i data-feather="menu" class="wd-20 ht-20"></i>
         </button>
