--- a/create-campaign_3.html
+++ b/create-campaign_3.html
@@ -174,6 +174,13 @@
                    </div>
 
                    </div>
+
+                   <div class="mg-md-t-50 col-md-6 col-12 pd-x-0 mg-y-20">
+                    <div class="d-flex">
+                      <a href="" class="btn btn-primary w-100 ">Done</a>
+                      <a href="./create-campaign_2.html" class="btn btn-outline-primary w-100 mg-l-20">Previous</a>
+                    </div>
+                  </div>
                     
                   </div>
                   <div class="col-lg-3 d-none -d-md-none d-lg-block d-xl-block pd-lg-t-100">
