--- a/create-campaign.html
+++ b/create-campaign.html
@@ -5,8 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Cloud - Interactive Associates">
-    <title>Cloud - Interactive Associates</title>
+    <meta name="description" content="Mysogi">
+    <title>Mysogi</title>
 
     <!-- Required External CSS -->
     <link href="assets/lib/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
