--- a/register.html
+++ b/register.html
@@ -5,8 +5,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Cloud - Interactive Associates">
-    <title>Cloud - Interactive Associates</title>
+    <meta name="description" content="Mysogi">
+    <title>Mysogi</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
 
     <!-- Required External CSS -->
