--- a/login.html
+++ b/login.html
@@ -32,14 +32,14 @@
             </a>
             <div class="">
               <div class="col-lg-10 col-xl-8 mx-auto pd-t-30 tx-center welcome-div">
-                <p class="tx-36 tx-bold mb-2">Welcome Back</p>
-                <p class="tx-18 tx-gray">Welcome back! Please login to your account.</p>
+                <p class="tx-36 tx-bold mb-2 tx-com">Welcome Back</p>
+                <p class="tx-16 tx-gray">Welcome back! Please login to your account.</p>
                 <form class="mg-y-50">
                   <div class="form-group">
-                    <input type="text" class="form-control shadow bd-0" placeholder="Enter your username">
+                    <input type="text" class="form-control new" placeholder="Username">
                   </div>
                   <div class="form-group">
-                    <input type="password" class="form-control shadow bd-0" placeholder="Enter your password">
+                    <input type="password" class="form-control new" placeholder="Password">
                   </div>
                   <div class="form-row mg-t-30">
                     <div class="form-group col-md-6 col-6">
@@ -52,13 +52,12 @@
                       <a href="http://">Forgot Password</a>
                     </div>
                   </div>
-                  <div class="form-row mg-t-40">
-                    <div class="form-group col-md-6">
-                      <a href="./dashboard.html" type="submit" class="btn btn-primary btn-block">Login</a>
+                  <div class="mg-y-30">
+                    <div class="form-group col-md-5 mx-auto">
+                      <a href="./campaign.html" type="submit" class="btn btn-primary btn-block btn-lg py-15">Login</a>
                     </div>
-                    <div class="form-group col-md-6">
-                      <a href="./register.html" type="submit" class="btn btn-outline-primary btn-block">Signup</a>
-                    </div>
+                    <a href="./register.html"><span class="tx-dark" style="color: #000; text-decoration:underline;">Don’t have an account yet? </span> <span style="text-decoration:underline;">Sign Up.</span></a>
+                   
                   </div>
                 </form>
                 <p class="tx-blac tx-12 pd-t-50 mb-0">Term of use. Privacy policy</p>
