--- a/sms-campaign.html
+++ b/sms-campaign.html
@@ -116,7 +116,7 @@
               <div class="progress-bar bg-primary progress-bar-striped progress-bar-animated wd-60p" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
             <div class="pd-md-y-20">
-                  <div class="">
+                  <div class="col-lg-11 pd-x-0">
                     <form>
                       <div>
                         <p class="tx-24 tx-bold mb-1 tx-com">Flash SMS / SMS</p>
@@ -139,13 +139,13 @@
                        </div>
                        <div class="form-group">
                         <label for="" class="mb-1">Campaign Message</label>
-                        <textarea name="" id="" class="form-control" rows="3" placeholder="Type your ad message here"></textarea>
+                        <textarea name="" id="" class="form-control" rows="3" placeholder="Type your ad message here e.g Get up to 50% discount on first purchase"></textarea>
                       </div>
                       </div>
                       
                     </form>
                     
-                    <div class="col-md-7 pd-x-0 mg-y-30">
+                    <div class="col-md-5 col-xl-4 pd-x-0 mg-y-50">
                       <div class="d-flex">
                         <a href="./sms-campaign_2.html" class="btn btn-primary w-100 mg-b-15 ">Proceed</a>
                         <a href="./create-campaign.html" class="btn btn-outline-primary w-100 mg-l-20 mg-b-15">Go Back</a>
