--- a/create-campaign.html
+++ b/create-campaign.html
@@ -158,7 +158,7 @@
                     </a>
                   </div>
                   <div class="col-md-6 col-lg-3 col-12 mg-t-20">
-                    <a href="./app-download.html" class="tx-dark">
+                    <a href="./app-campaign.html" class="tx-dark">
                       <div class="card card-height rounded bd-0 shadow-sm">
                         <div class="card-body tx-center pd-x-12">
                           <img src="./assets/img/mysogi_phone_sm.png" alt="" class="img-fluid" srcset="">
