--- a/billing.html
+++ b/billing.html
@@ -46,8 +46,8 @@
       <div class="aside-body">
         
         <ul class="nav nav-aside">
-          <li class="nav-item active"><a href="./campaign.html" class="nav-link"><i class="fa fa-archive  mr-3"></i><span>Campaigns</span></a></li>
-          <li class="nav-item"><a href="./billing.html" class="nav-link"><i class="fas fa-money-bill mr-3"></i><span>Billing</span></a></li>
+          <li class="nav-item"><a href="./campaign.html" class="nav-link"><i class="fa fa-archive  mr-3"></i><span>Campaigns</span></a></li>
+          <li class="nav-item active"><a href="./billing.html" class="nav-link"><i class="fas fa-money-bill mr-3"></i><span>Billing</span></a></li>
           <li class="nav-item"><a href="./sender.html" class="nav-link"><i class="fa fa-user mr-3 tx-muted"></i><span>Sender ID</span></a></li>
           <li class="nav-item"><a href="./setting.html" class="nav-link"><i class="fa fa-cog mr-3"></i><span>Settings</span></a></li>
           <li class="nav-item"><a href="dashboard.html" class="nav-link"><i class="fa fa-chart-bar mr-3" ></i> <span class="marine-active-menu">Analytics</span></a></li>
@@ -121,7 +121,7 @@
                       <div class="col-md-6 col-12">
                         <p class="tx-uppercase mb-0 tx-16">Current Balance</p>
                         <p class="tx-32 tx-semibold tx-green">+ N245,000.00</p>
-                        <button class="btn btn-primary mg-t-10 mg-md-t-30" data-toggle="modal" data-target="#fundModal"> <i class="fa fa-plus mg-r-5" ></i> Fund Wallet </button>
+                        <a href="./wallet.html" class="btn btn-primary mg-t-10 mg-md-t-30"> <i class="fa fa-plus mg-r-5" ></i> Fund Wallet </a>
                       </div>
                       <div class="col-md-6 col-12 mg-t-20 mg-md-t-0">
                         <p class="mb-1 tx-16">Auto recharge</p>
@@ -174,7 +174,7 @@
               <div class="col-md-7 col-12">
                 <div class="row justify-content-between">
                   <div class="col-md-4 col-12">
-                    <p class="mg-md-b-0 pd-t-10">Usauge Summary</p>
+                    <p class="mg-md-b-0 pd-t-10 tx-medium">Usauge Summary</p>
                   </div>
                   <div class="col-md-5 col-12">   
                     <div class="d-flex">
