--- a/all-campaigns.html
+++ b/all-campaigns.html
@@ -114,12 +114,12 @@
                 </div>
                 <div class="col-md-2 col-6">
                   <p>
-                    <a href="./create-campaign.html" class="btn btn-primary"> New Campaign</a>
+                    <a href="./create-campaign.html" class="btn btn-primary w-100"> New Campaign</a>
                   </p>
                 </div>
               </div>
 
-            <div class="card">
+            <div class="card rounded bd-0 shadow-sm">
               <div class="card-header bd-b-0 pd-b-0 pd-t-40 pd-md-x-30">
                 <div class="">
                     <div class="row justify-content-between">
