--- a/app-preview.html
+++ b/app-preview.html
@@ -51,7 +51,7 @@
           <li class="nav-item"><a href="./billing.html" class="nav-link"><i class="fas fa-money-bill mr-3"></i><span>Billing</span></a></li>
           <li class="nav-item"><a href="./sender.html" class="nav-link"><i class="fa fa-user mr-3 tx-muted"></i><span>Sender ID</span></a></li>
           <li class="nav-item"><a href="./setting.html" class="nav-link"><i class="fa fa-cog mr-3"></i><span>Settings</span></a></li>
-          <li class="nav-item"><a href="dashboard.html" class="nav-link"><i class="fa fa-chart-bar mr-3" ></i> <span class="marine-active-menu">Analytics</span></a></li>
+          <li class="nav-item"><a href="./analytics.html" class="nav-link"><i class="fa fa-chart-bar mr-3" ></i> <span class="marine-active-menu">Analytics</span></a></li>
         </ul>
                 
       </div>
@@ -108,7 +108,7 @@
         <div class="container pd-x-0"> 
           <div class="row justify-content-between">
             <div class="col-md-6 mg-b-20 mg-md-b-0">
-              <a href="./flier-campaign_2.html" class="tx-black">
+              <a href="./app-campaign_2.html" class="tx-black">
                <div class="d-flex">
                  <div>
                    <i class="fa fa-angle-left mg-r-10 pd-t-15 tx-18"></i>
@@ -257,7 +257,7 @@
                     <div class="card-body">
                       <p class="tx-20 tx-bold tx-com">Preview</p>
                       <div>
-                        <img src="./assets/img/create_ads_illustration.svg" class="img-fluid" alt="" srcset="">
+                        <img src="./assets/img/my5.png" class="img-fluid mg-b-10" alt="" srcset="">
                         <p class="mb-4">
                           Get Unlimited offer with Tizeti Ltd, Super fast and reliable network aaccess all day long
                         </p>
