--- a/app-campaign.html
+++ b/app-campaign.html
@@ -51,7 +51,7 @@
           <li class="nav-item"><a href="./billing.html" class="nav-link"><i class="fas fa-money-bill mr-3"></i><span>Billing</span></a></li>
           <li class="nav-item"><a href="./sender.html" class="nav-link"><i class="fa fa-user mr-3 tx-muted"></i><span>Sender ID</span></a></li>
           <li class="nav-item"><a href="./setting.html" class="nav-link"><i class="fa fa-cog mr-3"></i><span>Settings</span></a></li>
-          <li class="nav-item"><a href="dashboard.html" class="nav-link"><i class="fa fa-chart-bar mr-3" ></i> <span class="marine-active-menu">Analytics</span></a></li>
+          <li class="nav-item"><a href="./analytics.html" class="nav-link"><i class="fa fa-chart-bar mr-3" ></i> <span class="marine-active-menu">Analytics</span></a></li>
         </ul>
                 
       </div>
@@ -180,7 +180,7 @@
                   <div class="card shadow-sm rounded bd-0">
                     <div class="card-body">
                       <div>
-                        <img src="./assets/img/create_ads_illustration.svg" class="img-fluid" alt="" srcset="">
+                        <img src="./assets/img/my5.png" class="img-fluid mg-b-10" alt="" srcset="">
                         <p class="mb-4">
                           Get Unlimited offer with Tizeti Ltd, Super fast and reliable network aaccess all day long
                         </p>
