--- a/preview.html
+++ b/preview.html
@@ -48,7 +48,7 @@
           <li class="nav-item"><a href="./billing.html" class="nav-link"><i class="fas fa-money-bill mr-3"></i><span>Billing</span></a></li>
           <li class="nav-item"><a href="./sender.html" class="nav-link"><i class="fa fa-user mr-3 tx-muted"></i><span>Sender ID</span></a></li>
           <li class="nav-item"><a href="./setting.html" class="nav-link"><i class="fa fa-cog mr-3"></i><span>Settings</span></a></li>
-          <li class="nav-item"><a href="dashboard.html" class="nav-link"><i class="fa fa-chart-bar mr-3" ></i> <span class="marine-active-menu">Analytics</span></a></li>
+          <li class="nav-item"><a href="./analytics.html" class="nav-link"><i class="fa fa-chart-bar mr-3" ></i> <span class="marine-active-menu">Analytics</span></a></li>
         </ul>
                 
       </div>
@@ -149,7 +149,7 @@
                     <p class="tx-18 mb-0 tx-bold tx-com">Preview</p>
 
                     <div>
-                      <img src="./assets/img/create_ads_illustration.svg" class="img-fluid" alt="" srcset="">
+                      <img src="./assets/img/my6.png" class="img-fluid mg-b-20" alt="" srcset="">
                     </div>
                   </div>
                 </div>
